--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <img src = "photo.jpg" alt = "My photo" width = "209" height="260" class="leftimg">
+    <img src = "photo.jpg" alt = "My photo" width = "209" height="260">
     <hr>
     <aside>
         <h1>Информация о себе</h1>
